argoproj/stable-diffusion/comfyui-chroma-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: comfyui-chroma
spec:
  type: ClusterIP
  selector:
    app: comfyui-chroma
  ports:
    - name: http
      port: 8188
      targetPort: http
