argoproj/stable-diffusion/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stable-diffusion-webui
  labels:
    app: stable-diffusion-webui
spec:
  selector:
    app: stable-diffusion-webui
  ports:
    - name: http
      port: 7860
      targetPort: http
